src/objects/MassUploadServiceRecords__c.object
<CustomObject>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Values__c</fullName>
        <label>Record Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unique_Batch_Identifier__c</fullName>
        <label>Unique Batch Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mass Upload Service Record</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Processed__c</columns>
        <columns>Process_Name__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Record_Values__c</columns>
        <columns>Unique_Batch_Identifier__c</columns>
        <columns>ErrorMessage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Today</label>
    </listViews>
    <nameField>
        <displayFormat>MUSR-{0000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Upload Service Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>